api implementation with tests