@@ -6,6 +6,7 @@ import static org.mockito.Mockito.*;
 import com.ascend.testlab.client.postgresql.PgReaderClient;
 import com.ascend.testlab.constants.postgresql.ReadQuery;
 import com.ascend.testlab.dao.impl.AdminDAOImpl;
+import com.ascend.testlab.dto.response.ExperimentHistoryEntry;
 import io.reactivex.rxjava3.core.Single;
 import io.reactivex.rxjava3.observers.TestObserver;
 import io.vertx.core.Vertx;
@@ -13,6 +14,7 @@ import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
 import io.vertx.rxjava3.sqlclient.Tuple;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import org.junit.jupiter.api.BeforeEach;
@@ -40,6 +42,7 @@ class AdminDAOTest {
 
   private final String testProjectKey = "123e4567-e89b-12d3-a456-426614174000";
   private final String testExperimentName = "test-experiment";
+  private final String testExperimentId = "123e4567-e89b-12d3-a456-426614174001";
 
   @BeforeEach
   void setUp(Vertx vertx) {
@@ -252,7 +255,7 @@ class AdminDAOTest {
       // Arrange
       when(pgReaderClient.fetchAll(
               eq(ReadQuery.CHECK_EXPERIMENT_NAME), any(Tuple.class), any(Function.class)))
-          .thenReturn(Single.just(Arrays.asList(false)));
+          .thenReturn(Single.just(List.of(false)));
 
       // Act
       vertx.runOnContext(
@@ -270,6 +273,135 @@ class AdminDAOTest {
             verify(pgReaderClient, times(1))
                 .fetchAll(
                     eq(ReadQuery.CHECK_EXPERIMENT_NAME), any(Tuple.class), any(Function.class));
+            testContext.completeNow();
+          });
+    }
+  }
+
+  @Nested
+  @DisplayName("Experiment History Fetching Tests")
+  class FetchExperimentHistoryTests {
+    @Test
+    @DisplayName("Should return experiment history when DB returns history entries")
+    void testFetchExperimentHistory_Success() {
+      // Arrange
+      ExperimentHistoryEntry entry1 =
+          ExperimentHistoryEntry.builder()
+              .updatedBy("user1")
+              .previousData("{\"status\":\"DRAFT\"}")
+              .currentData("{\"status\":\"LIVE\"}")
+              .createdAt(System.currentTimeMillis())
+              .updatedAt(System.currentTimeMillis())
+              .build();
+      ExperimentHistoryEntry entry2 =
+          ExperimentHistoryEntry.builder()
+              .updatedBy("user2")
+              .previousData("{\"status\":\"LIVE\"}")
+              .currentData("{\"status\":\"PAUSED\"}")
+              .createdAt(System.currentTimeMillis())
+              .updatedAt(System.currentTimeMillis())
+              .build();
+      List<ExperimentHistoryEntry> mockHistory = Arrays.asList(entry1, entry2);
+      when(pgReaderClient.fetchAll(
+              eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class)))
+          .thenReturn(Single.just(mockHistory));
+
+      // Act
+      Single<List<ExperimentHistoryEntry>> result =
+          adminDAO.fetchExperimentHistory(testProjectKey, testExperimentId);
+      TestObserver<List<ExperimentHistoryEntry>> testObserver = result.test();
+
+      // Assert
+      testObserver.assertComplete();
+      testObserver.assertNoErrors();
+      testObserver.assertValueCount(1);
+      List<ExperimentHistoryEntry> actualHistory = testObserver.values().get(0);
+      assertNotNull(actualHistory);
+      assertEquals(2, actualHistory.size());
+      assertEquals("user1", actualHistory.get(0).updatedBy());
+      assertEquals("user2", actualHistory.get(1).updatedBy());
+      verify(pgReaderClient, times(1))
+          .fetchAll(eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class));
+    }
+
+    @Test
+    @DisplayName("Should return empty list when DB returns no history")
+    void testFetchExperimentHistory_EmptyResult() {
+      // Arrange
+      when(pgReaderClient.fetchAll(
+              eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class)))
+          .thenReturn(Single.just(List.of()));
+
+      // Act
+      Single<List<ExperimentHistoryEntry>> result =
+          adminDAO.fetchExperimentHistory(testProjectKey, testExperimentId);
+      TestObserver<List<ExperimentHistoryEntry>> testObserver = result.test();
+
+      // Assert
+      testObserver.assertComplete();
+      testObserver.assertNoErrors();
+      testObserver.assertValueCount(1);
+      List<ExperimentHistoryEntry> actualHistory = testObserver.values().get(0);
+      assertNotNull(actualHistory);
+      assertTrue(actualHistory.isEmpty());
+      verify(pgReaderClient, times(1))
+          .fetchAll(eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class));
+    }
+
+    @Test
+    @DisplayName("Should throw RuntimeException when DB fails")
+    void testFetchExperimentHistory_DatabaseError() {
+      // Arrange
+      RuntimeException dbException = new RuntimeException("Database connection failed");
+      when(pgReaderClient.fetchAll(
+              eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class)))
+          .thenReturn(Single.error(dbException));
+
+      // Act
+      Single<List<ExperimentHistoryEntry>> result =
+          adminDAO.fetchExperimentHistory(testProjectKey, testExperimentId);
+      TestObserver<List<ExperimentHistoryEntry>> testObserver = result.test();
+
+      // Assert
+      testObserver.assertError(RuntimeException.class);
+      verify(pgReaderClient, times(1))
+          .fetchAll(eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class));
+    }
+
+    @Test
+    @DisplayName("Should fetch experiment history asynchronously using Vert.x event loop context")
+    void testFetchExperimentHistory_Success_Async(Vertx vertx, VertxTestContext testContext) {
+      // Arrange
+      ExperimentHistoryEntry entry =
+          ExperimentHistoryEntry.builder()
+              .updatedBy("user1")
+              .previousData("{\"status\":\"DRAFT\"}")
+              .currentData("{\"status\":\"LIVE\"}")
+              .createdAt(System.currentTimeMillis())
+              .updatedAt(System.currentTimeMillis())
+              .build();
+      List<ExperimentHistoryEntry> mockHistory = Collections.singletonList(entry);
+      when(pgReaderClient.fetchAll(
+              eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class)))
+          .thenReturn(Single.just(mockHistory));
+
+      // Act
+      vertx.runOnContext(
+          v -> {
+            TestObserver<List<ExperimentHistoryEntry>> testObserver =
+                adminDAO.fetchExperimentHistory(testProjectKey, testExperimentId).test();
+
+            // Assert
+            testObserver.assertComplete();
+            testObserver.assertNoErrors();
+            testObserver.assertValueCount(1);
+            List<ExperimentHistoryEntry> actualHistory = testObserver.values().get(0);
+            assertNotNull(actualHistory);
+            assertEquals(1, actualHistory.size());
+            assertEquals("user1", actualHistory.get(0).updatedBy());
+            verify(pgReaderClient, times(1))
+                .fetchAll(
+                    eq(ReadQuery.FETCH_EXPERIMENT_HISTORY), any(Tuple.class), any(Function.class));
             testContext.completeNow();
           });
     }
